--- a/safety.html
+++ b/safety.html
@@ -1,7 +1,7 @@
 
 <html>
     <head>
-        <link rel="styesheet" href="style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
