--- a/ticket.html
+++ b/ticket.html
@@ -8,6 +8,8 @@
             <img class="logo" src="https://cdn.freebiesupply.com/logos/large/2x/jurassic-world-title-logo-png-transparent.png"/width="500px"/>
         </header>
         <nav>
+            
+            <a class="nav-link" href="index.html">Home</a>
             <a class="nav-link" href="ticket.html">Tickets</a>
             <a class="nav-link" href="safety.html">Safety</a>
             <a class="nav-link" href="hybrids.html">Hybrids</a>
