--- a/ticket.html
+++ b/ticket.html
@@ -15,7 +15,7 @@
             <a class="nav-link" href="hybrids.html">Hybrids</a>
             
         </nav>
-    <h1 style="color:black ;text-align center;font-size:50px">Tickets</h1>
+    <h1 style="color:white ;text-align center;font-size:50px">Tickets</h1>
     <h2 style="background-color:yellow;color:black;font size:30px">Jurassic World</h2>
    <table style="border:1px solid black;">
         <tr>
