--- a/hybrids.html
+++ b/hybrids.html
@@ -15,7 +15,7 @@
             <a class="nav-link" href="hybrids.html">Hybrids</a>
             
         </nav>
-    <h1 style="color:black ;text-align center;font-size:50px">Hybrids
+    <h1 style="color:white ;text-align center;font-size:50px">Hybrids
     </h1>
     <h2 style="background-color:yellow;color:black;font size:30px">Jurassic World</h2>
 <p>From the formidable Indominus Rex to the sinister Indoraptor, our genetically modified hybrids are created using the most state-of-the-art technology known to mankind.</p>
