--- a/hybrids.html
+++ b/hybrids.html
@@ -21,6 +21,6 @@
 <p style="color:white">From the formidable Indominus Rex to the sinister Indoraptor, our genetically modified hybrids are created using the most state-of-the-art technology known to mankind.</p>
     <p><img src="https://i.ytimg.com/vi/zATUUw2IGM4/maxresdefault.jpg"width="550px"/></p>
     <h2 style="color:red">About us</h2>
-   <p>We are dedicated to bringing prehistoric wonders back to life for humans to admire!</p>
+   <p style="color:white">We are dedicated to bringing prehistoric wonders back to life for humans to admire!</p>
     </body>
 </html>
