--- a/ticket.html
+++ b/ticket.html
@@ -18,22 +18,22 @@
     <h1 style="color:white ;text-align center;font-size:50px">Tickets</h1>
     <h2 style="background-color:yellow;color:black;font size:30px">Jurassic World</h2>
    <table style="border:1px solid black;">
-        <tr>
+        <tr style="color:white">
             <td style="border:1px solid red;">Age</td>
             <td style="border:1px solid red;">Amount</td>
             <td style="border:1px solid red;">Price</td>
         </tr>
-        <tr>
+        <tr style="color:white">
             <td style="border:1px solid blue;">6+</td>
             <td style="border:1px solid blue;">1 ticket (Multiply for actual price</td>
             <td style="border:1px solid blue;">50 $</td>
         </tr>
-        <tr>
+        <tr style="color:white">
         <td style="border:1px solid orange;">12+</td>
         <td style="border:1px solid orange;">1 ticket (Multiply for actual price)</td>
         <td style="border:1px solid orange;">75 $</td>
         </tr>
-        <tr>
+        <tr style="color:white">
         <td style="border:1px solid olive;">16+</td>
         <td style="border:1px solid olive;">1 ticket (Multiply for actual price)</td>
         <td style="border:1px solid olive;">100 $</td>
@@ -41,6 +41,6 @@
     </table>
     <p><img src="https://i.redd.it/wvkxao8l5ofc1.jpeg" width="550px"/></p>
     <h2 style="color:red">About us</h2>
-   <p>We are dedicated to bringing prehistoric wonders back to life for humans to admire!</p>
+   <p style="color:white">We are dedicated to bringing prehistoric wonders back to life for humans to admire!</p>
     </body>
 </html>
